tests/regression/errors/basic/type_error_3.csd
// Type error test 3
sus number drip = 3
sus text tea = "string_3"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 3:", wrong)
